--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,3 +2,4 @@ option('enable_valgrind', type: 'boolean', value: false)
 option('enable_bindings', type: 'boolean', value: false)
 option('enable_asan', type: 'boolean', value: false)
 option('enable_ubsan', type: 'boolean', value: false)
+option('enable_docs', type: 'boolean', value: false)
