--- a/bindings/scenarios/CMakeLists.txt
+++ b/bindings/scenarios/CMakeLists.txt
@@ -21,6 +21,10 @@ foreach(scenario ${scenarios})
     if((NOT ("${LUA_INTERPRETER}" MATCHES "LUA_INTERPRETER-NOTFOUND")) AND (NOT ("${scenario}" MATCHES "fail")))
         add_test("scenario-${scenario}" "${LUA_INTERPRETER}" "${CMAKE_CURRENT_BINARY_DIR}/scenarios.lua" "${CMAKE_CURRENT_BINARY_DIR}/${scenario}")
         set_property(TEST "scenario-${scenario}" PROPERTY FAIL_REGULAR_EXPRESSION "^${LUA_INTERPRETER}: ")
+        if((NOT APPLE) AND (NOT ("${MEMORYCHECK_COMMAND}" MATCHES "MEMORYCHECK_COMMAND-NOTFOUND")))
+            add_test("scenario-${scenario}-valgrind" "${MEMORYCHECK_COMMAND}" ${MEMORYCHECK_COMMAND_OPTIONS} "${LUA_INTERPRETER}" "${CMAKE_CURRENT_BINARY_DIR}/scenarios.lua" "${CMAKE_CURRENT_BINARY_DIR}/${scenario}")
+            set_property(TEST "scenario-${scenario}-valgrind" PROPERTY FAIL_REGULAR_EXPRESSION "^${LUA_INTERPRETER}: ")
+        endif()
     endif()
 endforeach()
 
@@ -28,6 +32,10 @@ endforeach()
 if (NOT ("${LUA_INTERPRETER}" MATCHES "LUA_INTERPRETER-NOTFOUND"))
     add_test("scenario-fail" "${LUA_INTERPRETER}" "${CMAKE_CURRENT_BINARY_DIR}/scenarios.lua" "${CMAKE_CURRENT_BINARY_DIR}/fail")
     set_property(TEST "scenario-fail" PROPERTY WILL_FAIL TRUE)
+    if((NOT APPLE) AND (NOT ("${MEMORYCHECK_COMMAND}" MATCHES "MEMORYCHECK_COMMAND-NOTFOUND")))
+        add_test("scenario-fail-valgrind" "${MEMORYCHECK_COMMAND}" ${MEMORYCHECK_COMMAND_OPTIONS} "${LUA_INTERPRETER}" "${CMAKE_CURRENT_BINARY_DIR}/scenarios.lua" "${CMAKE_CURRENT_BINARY_DIR}/fail")
+        set_property(TEST "scenario-fail-valgrind" PROPERTY WILL_FAIL TRUE)
+    endif()
 endif()
 
 add_custom_target(lua-scenarios ALL SOURCES ${SCENARIO_FILES})
